# mcp_gawron_cloud

./: .gitattributes  CHANGELOG.md  Dockerfile  README.md  VAI MSc_Modulhandbuch_FPO 2020_WS 2025-26_Bearbeitungsversion.md  main.py  pyproject.toml  release_config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yaml
app/: PartyRetriever.py  __init__.py  index.py  main.py  msword_backend.py
files/: VAI MSc_Modulhandbuch_FPO 2020_WS 2025-26_Bearbeitungsversion.docx
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml
