[project]
name = "mcp.gawron.cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.4",
    "langchain-chroma>=0.2.4",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.28",
    "python-dotenv>=1.1.1",
]
